--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@angular/router": "^6.1.0",
     "@auth0/angular-jwt": "^2.0.0",
     "@mdi/font": "^2.6.95",
+    "angular2-qrcode": "^2.0.1",
     "core-js": "^2.5.4",
     "express": "^4.16.3",
     "hammerjs": "^2.0.8",
     "jquery": "^2.2.4",
     "materialize-css": "^1.0.0-rc.2",
+    "ngx-clipboard": "^11.1.6",
     "ngx-materialize": "^6.1.3",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.2.2",
