--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "navpi-angular",
+  "name": "navcoin-angular",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -26,8 +26,8 @@
     "core-js": "^2.5.4",
     "express": "^4.16.3",
     "hammerjs": "^2.0.8",
-    "jquery": "^2.2.4",
-    "materialize-css": "^1.0.0-rc.2",
+    "jquery": "^3.3.1",
+    "materialize-css": "^0.100.2",
     "ngx-clipboard": "^11.1.6",
     "ngx-materialize": "^6.1.3",
     "rxjs": "^6.0.0",
