--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jquery": "^3.3.1",
     "materialize-css": "^0.100.2",
     "ngx-clipboard": "^11.1.6",
+    "ngx-linkifyjs": "^1.3.0",
     "ngx-materialize": "^6.1.3",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.2.2",
