--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "ngx-clipboard": "^11.1.6",
     "ngx-linkifyjs": "^1.3.0",
     "ngx-materialize": "^6.1.3",
-    "rxjs": "^6.0.0",
+    "rxjs": "6.0.0",
     "rxjs-compat": "^6.2.2",
     "zone.js": "~0.8.26"
   },
