--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "angular2-qrcode": "^2.0.1",
     "core-js": "^2.5.4",
     "express": "^4.16.3",
+    "file-saver": "^2.0.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
     "materialize-css": "^0.100.2",
+    "moment": "^2.24.0",
     "ngx-clipboard": "^11.1.6",
     "ngx-linkifyjs": "^1.3.0",
     "ngx-materialize": "^6.1.3",
